ingress/nginx/app1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
  name: app1
spec:
  type: NodePort
  selector:
    app: app1
  ports:
  - name: http
    port: 3000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: kudohn/app1:v1
        name: app1
        ports:
          - name: http
            protocol: TCP
            containerPort: 3000
        resources: {}
