ingress/nginx/app2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app2
  name: app2
spec:
  type: NodePort
  selector:
    app: app2
  ports:
  - name: http
    port: 3000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: kudohn/app2:v1
        name: app2
        ports:
          - name: http
            protocol: TCP
            containerPort: 3000
        resources: {}
