ingress/nginx/ingress-ratelimit.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "3"
spec:
  rules:
  - host: frieza.dev
    http:
      paths:
      - path: /app1
        backend: 
          serviceName: app1
          servicePort: 3000
      - path: /app2
        backend: 
          serviceName: app2
          servicePort: 3000
