ingress/nginx/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata: 
  name: ingress
  annotations:
spec:
  rules:
  - host: frieza.dev
    http:
      paths:
      - path: /app1
        backend: 
          serviceName: app1
          servicePort: 80
      - path: /app2
        backend: 
          serviceName: app2
          servicePort: 80
